--- a/Anul 4/Semestrul 2/PW/mystylesheet.css
+++ b/Anul 4/Semestrul 2/PW/mystylesheet.css
@@ -25,7 +25,9 @@ footer {
     position: fixed;
     bottom: 0;
     width: inherit;
-    padding: inherit;
+    min-width: 400px;
+    overflow: auto;
+
 }
 
 header h1 {
@@ -39,8 +41,8 @@ nav {
     top: 0; /* Stay at the top */
     left: 0;
     background-color: rgb(63, 63, 63); /* Black*/
-    min-width: 100px;
-    padding: inherit;
+    overflow: auto;
+    overflow-x: hidden;
 }
 
 nav a {
